# my_sway_bar

./: Cargo.toml  README.md  install.sh  sway_status_bar.old
src/: bar.rs  colour.rs  main.rs
